# deep-research

./: .env.example  .gitignore  CHECKLIST.md  Dockerfile  IMPLEMENTATION.md  Makefile  QUICKSTART.md  README.md  docker-compose.yml  mcp_researcher.json  pyproject.toml  server.json  verify.py
.github/workflows/: publish-mcp.yml
docs/: IMPLEMENTATION.md  Modelfile.gpt-oss-fixed
src/: server.py
src/deep_research/: README.md  __init__.py  coordinator.py  db_manager.py  example_db_usage.py  planner.py  prompts.py  report_generator.py  researcher.py  storage.py  task_splitter.py
