[project]
name = "deep-research"
version = "0.1.0"
description = "Multi-agent research agent for deep research tasks. divide and conquer approach to research."
readme = "README.md"
authors = [
    { name = "valiantlynx", email = "valiantlynxz@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.9",
    "fastmcp>=2.13.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sseclient-py>=1.8.0",
    "uvicorn>=0.38.0",
    "machine-core",
    "pydantic-ai-slim[duckduckgo]>=1.33.0",
    "pandas>=3.0.1",
    "numpy>=2.4.3",
    "lancedb>=0.30.0",
]
[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
machine-core = { git = "https://github.com/samletnorge/machine-core.git" }

